# ai_harness

./: .gitignore  Makefile  PHASE1_MVP_IMPLEMENTATION_PLAN.md  chatgpt.md  pyproject.toml
docs/: README.md  mvp-architecture.md  mvp-sequence-diagrams.md  mvp-workflows.md
mvp_domain_model_docs/: 00_domain_models_enums.md  01_interface_layer_contracts.md  02_orchestration_layer_contracts.md  03_tool_layer_contracts.md  04_memory_layer_contracts.md  05_observability_layer_contracts.md  06_cross-cutting_platform_services.md
src/: __init__.py  __main__.py
src/application/: __init__.py
src/application/interface_layer/: __init__.py  services.py
src/application/memory/: __init__.py  services.py
src/application/observability/: __init__.py  services.py
src/application/orchestration/: __init__.py  services.py
src/application/platform/: __init__.py  services.py
src/application/tools/: __init__.py  services.py
src/bootstrap/: __init__.py  defaults.py
src/domain/: __init__.py
src/domain/enums/: __init__.py  event_severity.py  event_type.py  memory_operation.py  memory_status.py  metric_type.py  task_priority.py  task_status.py  tool_status.py
src/domain/models/: __init__.py  _serialization.py  execution_state.py  memory_request.py  memory_response.py  metric_record.py  observation_event.py  task_context.py  task_request.py  task_result.py  tool_request.py  (+1 more)
src/interfaces/: __init__.py
tests/: __init__.py
tests/integration/: test_interface_end_to_end.py
tests/unit/: test_domain_models.py  test_memory_and_tools.py  test_platform_and_observability.py
(+39 files in other folders)
